# InstaStyleFilters

./: README.md  pyproject.toml  timing_report.txt
in3110_instapy/: __init__.py  cli.py  numba_filters.py  numpy_filters.py  python_filters.py  timing.py  timing_report.txt
in3110_instapy.egg-info/: PKG-INFO
test/: test_numba.py  test_numpy.py  test_python.py
